# extensions

./: .gitignore  .gitmodules  .prettierignore  AUTHORING_EXTENSIONS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  backup.sh  dangerfile.ts  extension.json  extension.toml  extensions.toml  extensions_sorted.toml  justfile  neon-pulse.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  tsconfig.json  vite.config.mjs
.github/: actionlint.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 0_theme_request.yml  1_language_request.yml  2_other_request.yml  config.yml
.github/workflows/: actionlint.yml  ci.yml  danger.yml  release.yml
.zed/: settings.json
cli/: index.js
dark-void/: extension.json
extensions/: .gitignore  S-DarkTheme  extensions.toml
extensions/abacatepay-theme/: extension.toml
extensions/adech-theme/: README.md  adech.json  extension.toml
extensions/amethyst-pulse/: extension.json
extensions/arch-mcp/: .gitignore  Cargo.toml  README.md  extension.toml  extension.wasm
extensions/augment-context-engine/: Cargo.toml  LICENSE  extension.toml  extension.wasm
schemas/: icon-config.json  language-config.json  theme-family.json
script/: check-submodule-paths.sh  package-extensions  package-extensions.js  package-lock.json  package.json  publish-extensions
scripts/: sync-extension-submodule.sh
snippets/: python.json
src/: package-extensions.js  sort-extensions.js
themes/: 2026-dark.json  amber-monochrome-monitor-crt-phosphor.json  green-monochrome-monitor-crt-phosphor.json
(+148 files in other folders)
