[workspace]
members = [
    "extensions/biome",
    "extensions/capnp",
    "extensions/csv",
    "extensions/d",
    "extensions/dockerfile",
    "extensions/latex",
    "extensions/markdown-oxide",
    "extensions/navi",
    "extensions/nu",
    "extensions/odin",
    "extensions/pest",
    "extensions/rescript",
    "extensions/scala",
    "extensions/slint",
    "extensions/starlark",
    "extensions/templ",
    "extensions/typst",
]
